# todos_qt

./: .env.template  .gitignore  app.spec  environment.yml  mypy.ini  personal.spec  pyproject.toml  requirements.txt  ruff.toml
assets/: config-template.json  config.json  config.template.json  secret-template.json
scripts/: build_windows.cmd
scripts/linux/: build-personal.sh  create-env.sh  remove-env.sh  update-env.sh
scripts/win/: create-env.cmd  create-personal-exe.cmd  run-todos.cmd  update-env.cmd  update-lock-file.cmd
src/: config_template.py  main.py  personal.py
src/adapter/: __init__.py  category_repo.py  config.py  config_template.py  db.py  db_category_repository.py  db_todo_repository.py  db_user_repository.py  default_unit_of_work.py  environ_config.py  fs.py  json_config.py  sqlite_db.py  sqlite_todo_repository.py  sqlite_unit_of_work.py  todo_repo.py  todo_repository.py  user_repo.py
src/domain/: __init__.py  category.py  category_repository.py  category_service.py  config.py  create_uuid.py  date_calc.py  db.py  due_date.py  easter.py  edit_mode.py  error.py  exceptions.py  frequency.py  frequency_db_name.py  frequency_type.py  fs.py  holidays.py  irregular.py  memorial_day.py  month.py  next_date.py  option.py  permissions.py  prior_date.py  rows.py  should_display.py  standardize_str.py  todo.py  todo_category.py  todo_repository.py  todo_service.py  todo_unit_of_work.py  unspecified.py  user.py  user_repository.py  user_service.py  validation_result.py  validators.py  view.py  (+1 more)
src/domain/frequencies/: __init__.py  daily.py  easter.py  irregular.py  monthly.py  once.py  weekly.py  xdays.py  yearly.py
src/presentation/: __init__.py  main_view.py  state.py  view.py  widget.py
src/presentation/category/: controller.py  requests.py  state.py  view.py  widget.py
src/presentation/category_selector/: __init__.py  controller.py  requests.py  state.py  view.py  widget.py
src/presentation/main/: state.py  view.py
src/presentation/shared/: __init__.py  font.py  fonts.py  icons.py  theme.py  worker.py
src/presentation/todo/: __init__.py  controller.py  requests.py  state.py  todo_list_view.py  todo_list_view_model.py  view.py  widget.py
src/presentation/user/: __init__.py  controller.py  state.py  view.py  widget.py
src/presentation/user_selector/: __init__.py  controller.py  state.py  view.py  widget.py
src/service/: __init__.py  category_service.py  db_category_service.py  db_todo_service.py  db_user_service.py  todo_service.py  unit_of_work.py  user_service.py
test/: conftest.py
test/adapter/: test_db_category_repository.py  test_db_todo_repository.py  test_sqlite_db.py
test/domain/: test_frequency.py  test_frequency_db_name.py  test_memorial_day.py  test_prior_date.py  test_validation_result.py  test_weekday.py
test/fake/: __init__.py  category_service.py  todo_service.py  user_service.py
test/presentation/: test_todo_form.py
test/service/: test_db_category_service.py  test_todo_service.py
tests/adapter/: test_db_category_repository.py
tests/domain/: test_date_calc.py  test_weekday.py
tests/fake/: __init__.py  todo_service.py  user_service.py
(+110 files in other folders)
