[project]
name = "todos-qt"
description = "A humble ToDo application"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "loguru",
    "PyQt6",
    "sqlalchemy",
    "psycopg2-binary",
]


[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
ignore = []


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "hypothesis",
  "mypy",
  "ruff",
  "ruff-lsp",
  "pytest",
  "pip-audit",
  "pip-tools",
  "pyinstaller",
  "pytest-qt",
]
[tool.hatch.envs.default.scripts]
test = "pytest -p no:faulthandler -s {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
check = "cls && mypy --install-types --non-interactive {args:src tests}"
lint = "ruff check {args:src tests}"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.cxfreeze]
executables = [
    {script = "src/personal.py", base = "gui", icon = "assets/icons/app.ico", target_name = "ToDo"},
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "unittest"]
packages = [
    "sqlalchemy.dialects.sqlite",
]
zip_include_packages = [
    "loguru",
    "PyQt6",
    "sqlalchemy",
    "psycopg2-binary",
]
